--- a/React_WorkPlace/ReactApplication_01/package.json
+++ b/React_WorkPlace/ReactApplication_01/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package.json",
+  "name": "react-application-01",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
